--- a/source/index.html
+++ b/source/index.html
@@ -20,6 +20,21 @@
       </div>
     </header>
     <main>
+      <section class="intro">
+        <div class="intro__container">
+          <div class="intro wrapper">
+            <ul class="intro__list">
+              <li class="intro__item">Тренажёрный зал</li>
+              <li class="intro__item">Групповые занятия</li>
+              <li class="intro__item">Кардио-зона</li>
+            </ul>
+            <p class="intro__city">Омск</p>
+            <h2 class="intro__title">Фитнес Центр</h2>
+            <button class="intro__button" type="submit">Купить а бонемент</button>
+          </div>
+        </div>
+
+      </section>
     </main>
     <footer>
       <div class="container"></div>
