--- a/source/index.html
+++ b/source/index.html
@@ -22,16 +22,17 @@
     <main>
       <section class="intro">
         <div class="intro__container">
-          <div class="intro wrapper">
+          <div class="intro__text-wrapper">
+            <p class="intro__city">Омск</p>
             <ul class="intro__list">
               <li class="intro__item">Тренажёрный зал</li>
               <li class="intro__item">Групповые занятия</li>
               <li class="intro__item">Кардио-зона</li>
             </ul>
-            <p class="intro__city">Омск</p>
             <h2 class="intro__title">Фитнес Центр</h2>
-            <button class="intro__button" type="submit">Купить а бонемент</button>
+            <button class="intro__button button" type="submit">Купить абонемент</button>
           </div>
+          <img class="intro__image" src="img/hero-image.jpg" width="500" height="524" alt="">
         </div>
 
       </section>
