завершаем верстку секции about

--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,29 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Описание проекта">
-  <title>Fitness Project</title>
+  <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-regular.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-500.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-600.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-700.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/roboto-condensed-v27-cyrillic_latin-800.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/alumni-sans-v18-cyrillic_latin-regular.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/alumni-sans-v18-cyrillic_latin-500.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/alumni-sans-v18-cyrillic_latin-600.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/alumni-sans-v18-cyrillic_latin-700.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="fonts/alumni-sans-v18-cyrillic_latin-800.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/style.min.css">
+  <title>Fitness Project</title>
 </head>
 
 <body>
@@ -32,9 +53,49 @@
             <h2 class="intro__title">Фитнес Центр</h2>
             <button class="intro__button button" type="submit">Купить абонемент</button>
           </div>
-          <img class="intro__image" src="img/hero-image.jpg" width="500" height="524" alt="">
-        </div>
+          <picture>
+            <source type="image/webp" media="(max-width: 1365px)"
+              srcset="img/hero-image-tablet.webp 1x, img/hero-image-tablet@2x.webp 2x">
+            <source type="image/webp" media="(max-width: 1365px)"
+              srcset="img/hero-image-tablet.png 1x, img/hero-image-tablet@2x.png 2x">
+            <img class="intro__image" src="img/hero-image-desktop.png" srcset="img/hero-image-desktop@2x.png 2x"
+              width="500" height="524" alt="">
+          </picture>
 
+        </div>
+      </section>
+      <section class="about">
+        <div class="about__container">
+          <div class="about__text-wrapper">
+            <h3 class="about__title">Тренажерный зал</h3>
+            <h4 class="about__overview">Просторный зал площадью 900 кв/м</h4>
+            <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для
+              укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для всех
+              спортсменов.
+              В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре есть
+              несколько оборудованных залов для различных видов групповых занятий. </p>
+          </div>
+          <div class="about__media-wrapper">
+            <picture>
+              <source type="image/webp" media="(max-width: 767px)"
+                srcset="img/gym-picture-mobile.webp 1x, img/gym-picture-mobile@2x.webp 2x">
+              <source type="image/webp" media="(max-width: 767px)"
+                srcset="img/gym-picture-mobile.png 1x, img/gym-picture-mobile@2x.png 2x">
+              <source type="image/webp" media="(max-width: 1365px)"
+                srcset="img/gym-picture-tablet.webp 1x, img/gym-picture-tablet@2x.webp 2x">
+              <source type="image/webp" media="(max-width: 1365px)"
+                srcset="img/gym-picture-tablet.png 1x, img/gym-picture-tablet@2x.png 2x">
+              <img class="about__image" src="img/gym-picture-desktop.png" srcset="img/gym-picture-desktop@2x.png 2x"
+                width="660" height="401" alt="">
+            </picture>
+            <div class="about__iframe-wrapper">
+              <iframe width="364" height="228" src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
