--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
       <h1 class="visually-hidden">Просторный тренажерный зал площадью 900 кв/м</h1>
       <div class="header__container container">
         <span class="header__logo">Supergym</span>
-        <a class="header_telephone" href="tel: 8-800-555-55-55">8-800-555-55-55</a>
+        <a class="header__telephone" href="tel: 8-800-555-55-55">8-800-555-55-55</a>
       </div>
     </header>
     <main>
@@ -67,13 +67,15 @@
       <section class="about">
         <div class="about__container">
           <div class="about__text-wrapper">
-            <h3 class="about__title">Тренажерный зал</h3>
-            <h4 class="about__overview">Просторный зал площадью 900 кв/м</h4>
-            <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для
-              укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для всех
-              спортсменов.
-              В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре есть
-              несколько оборудованных залов для различных видов групповых занятий. </p>
+            <h2 class="about__title">Тренажерный зал</h3>
+              <h3 class="about__overview">Просторный зал площадью 900 кв/м</h4>
+                <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для
+                  укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для
+                  всех
+                  спортсменов.
+                  В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре
+                  есть
+                  несколько оборудованных залов для различных видов групповых занятий. </p>
           </div>
           <div class="about__media-wrapper">
             <picture>
@@ -96,6 +98,31 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <section class="subscription">
+        <div class="subscription__container container">
+          <h2 class="subscription__title tabs">Абонементы</h2>
+          <div class="tabs no-transition-global" data-tabs="parent" data-delay="300" data-height="max">
+            <div class="tabs__controls" data-tabs="controls">
+              <button class="tabs__control button" type="button" data-tabs="control">1 месяц</button>
+              <button class="tabs__control button" type="button" data-tabs="control">6 месяцев</button>
+              <button class="tabs__control button" type="button" data-tabs="control">12 месяцев</button>
+            </div>
+            <div class="tabs__content" data-tabs="content">
+              <div class="tabs__element" data-tabs="element">
+                <h4 class="tabs__title">С тренером</h4>
+                <p class="tabs__description">12 занятий</p>
+                <div class="tabs__price-wrapper">
+                  <span class="tabs__price">5000</span>
+                  <span class="tabs__faded-price">5000</span>
+                </div>
+                <button class="tabs__button button" type="button">Купить абонемент</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </section>
     </main>
     <footer>
