стилизуем общую картину для блока абонементов

--- a/source/index.html
+++ b/source/index.html
@@ -119,6 +119,24 @@
                 </div>
                 <button class="tabs__button button" type="button">Купить абонемент</button>
               </div>
+              <div class="tabs__element" data-tabs="element">
+                <h4 class="tabs__title">С тренером</h4>
+                <p class="tabs__description">12 занятий</p>
+                <div class="tabs__price-wrapper">
+                  <span class="tabs__price">5000</span>
+                  <span class="tabs__faded-price">5000</span>
+                </div>
+                <button class="tabs__button button" type="button">Купить абонемент</button>
+              </div>
+              <div class="tabs__element" data-tabs="element">
+                <h4 class="tabs__title">С тренером</h4>
+                <p class="tabs__description">12 занятий</p>
+                <div class="tabs__price-wrapper">
+                  <span class="tabs__price">5000</span>
+                  <span class="tabs__faded-price">5000</span>
+                </div>
+                <button class="tabs__button button" type="button">Купить абонемент</button>
+              </div>
             </div>
           </div>
         </div>
