--- a/source/index.html
+++ b/source/index.html
@@ -110,34 +110,37 @@
               <button class="tabs__control button" type="button" data-tabs="control">12 месяцев</button>
             </div>
             <div class="tabs__content" data-tabs="content">
-              <div class="tabs__element" data-tabs="element">
-                <h4 class="tabs__title">С тренером</h4>
-                <p class="tabs__description">12 занятий</p>
-                <div class="tabs__price-wrapper">
-                  <span class="tabs__price">5000</span>
-                  <span class="tabs__faded-price">5000</span>
-                </div>
-                <button class="tabs__button button" type="button">Купить абонемент</button>
-              </div>
-              <div class="tabs__element" data-tabs="element">
-                <h4 class="tabs__title">С тренером</h4>
-                <p class="tabs__description">12 занятий</p>
-                <div class="tabs__price-wrapper">
-                  <span class="tabs__price">5000</span>
-                  <span class="tabs__faded-price">5000</span>
-                </div>
-                <button class="tabs__button button" type="button">Купить абонемент</button>
-              </div>
-              <div class="tabs__element" data-tabs="element">
-                <h4 class="tabs__title">С тренером</h4>
-                <p class="tabs__description">12 занятий</p>
-                <div class="tabs__price-wrapper">
-                  <span class="tabs__price">5000</span>
-                  <span class="tabs__faded-price">5000</span>
-                </div>
-                <button class="tabs__button button" type="button">Купить абонемент</button>
-              </div>
+              <ul class="tabs__list">
+                <li class="tabs__item">
+                  <h4 class="tabs__title">С тренером</h4>
+                  <p class="tabs__description">12 занятий</p>
+                  <div class="tabs__price-wrapper">
+                    <span class="tabs__price">5000</span>
+                    <span class="tabs__faded-price">5000</span>
+                    </div>
+                    <button class="tabs__button button" type="button">Купить абонемент</button>
+                </li>
+                <li class="tabs__item tabs__item--is-selected">
+                  <h4 class="tabs__title">Дневной</h4>
+                  <p class="tabs__description">с 8:00 до 17:00</p>
+                  <div class="tabs__price-wrapper">
+                    <span class="tabs__price">1700</span>
+                    <span class="tabs__faded-price">1700</span>
+                  </div>
+                  <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
+                </li>
+                <li class="tabs__item">
+                  <h4 class="tabs__title">Полный день</h4>
+                  <p class="tabs__description">с 8:00 до 22:00 </p>
+                  <div class="tabs__price-wrapper">
+                    <span class="tabs__price">2700</span>
+                    <span class="tabs__faded-price">2700</span>
+                  </div>
+                  <button class="tabs__button button" type="button">Купить абонемент</button>
+                </li>
+
             </div>
+
           </div>
         </div>
 
@@ -147,7 +150,7 @@
       <div class="container"></div>
     </footer>
   </div>
-
+  <script src="js/vendor.min.js"></script>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
