--- a/source/index.html
+++ b/source/index.html
@@ -67,15 +67,15 @@
       <section class="about">
         <div class="about__container">
           <div class="about__text-wrapper">
-            <h2 class="about__title">Тренажерный зал</h3>
-              <h3 class="about__overview">Просторный зал площадью 900 кв/м</h4>
-                <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для
-                  укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для
-                  всех
-                  спортсменов.
-                  В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре
-                  есть
-                  несколько оборудованных залов для различных видов групповых занятий. </p>
+            <h2 class="about__title">Тренажерный зал</h2>
+            <h3 class="about__overview">Просторный зал площадью 900 кв/м</h3>
+            <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для
+              укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для
+              всех
+              спортсменов.
+              В зале расположены отдельная зона для Crossfit и кардио-зона с 40 тренажерами. Также в фитнес центре
+              есть
+              несколько оборудованных залов для различных видов групповых занятий. </p>
           </div>
           <div class="about__media-wrapper">
             <picture>
@@ -92,7 +92,7 @@
             </picture>
             <div class="about__iframe-wrapper">
               <iframe width="364" height="228" src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v"
-                title="YouTube video player" frameborder="0"
+                title="YouTube video player"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
             </div>
@@ -109,48 +109,43 @@
               <button class="tabs__control button" type="button" data-tabs="control">6 месяцев</button>
               <button class="tabs__control button" type="button" data-tabs="control">12 месяцев</button>
             </div>
-            <div class="tabs__content" data-tabs="content">
-              <ul class="tabs__list">
-                <li class="tabs__item">
-                  <h4 class="tabs__title">С тренером</h4>
-                  <p class="tabs__description">12 занятий</p>
-                  <div class="tabs__price-wrapper">
-                    <span class="tabs__price">5000</span>
-                    <span class="tabs__faded-price">5000</span>
-                    </div>
-                    <button class="tabs__button button" type="button">Купить абонемент</button>
-                </li>
-                <li class="tabs__item tabs__item--is-selected">
-                  <h4 class="tabs__title">Дневной</h4>
-                  <p class="tabs__description">с 8:00 до 17:00</p>
-                  <div class="tabs__price-wrapper">
-                    <span class="tabs__price">1700</span>
-                    <span class="tabs__faded-price">1700</span>
-                  </div>
-                  <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
-                </li>
-                <li class="tabs__item">
-                  <h4 class="tabs__title">Полный день</h4>
-                  <p class="tabs__description">с 8:00 до 22:00 </p>
-                  <div class="tabs__price-wrapper">
-                    <span class="tabs__price">2700</span>
-                    <span class="tabs__faded-price">2700</span>
-                  </div>
-                  <button class="tabs__button button" type="button">Купить абонемент</button>
-                </li>
-
-            </div>
-
+            <ul class="tabs__list">
+              <li class="tabs__item">
+                <h4 class="tabs__title">С тренером</h4>
+                <p class="tabs__description">12 занятий</p>
+                <div class="tabs__price-wrapper" data-tabs="content">
+                  <span class="tabs__price">5000</span>
+                  <span class="tabs__faded-price">5000</span>
+                </div>
+                <button class="tabs__button button" type="button">Купить абонемент</button>
+              </li>
+              <li class="tabs__item tabs__item--is-selected">
+                <h4 class="tabs__title">Дневной</h4>
+                <p class="tabs__description">с 8:00 до 17:00</p>
+                <div class="tabs__price-wrapper">
+                  <span class="tabs__price">1700</span>
+                  <span class="tabs__faded-price">1700</span>
+                </div>
+                <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
+              </li>
+              <li class="tabs__item">
+                <h4 class="tabs__title">Полный день</h4>
+                <p class="tabs__description">с 8:00 до 22:00 </p>
+                <div class="tabs__price-wrapper">
+                  <span class="tabs__price">2700</span>
+                  <span class="tabs__faded-price">2700</span>
+                </div>
+                <button class="tabs__button button" type="button">Купить абонемент</button>
+              </li>
+            </ul>
           </div>
         </div>
-
       </section>
     </main>
     <footer>
       <div class="container"></div>
     </footer>
   </div>
-  <script src="js/vendor.min.js"></script>
   <script src="js/vendor.min.js"></script>
   <script src="js/main.min.js"></script>
 </body>
