начало секции игр

--- a/source/index.html
+++ b/source/index.html
@@ -141,6 +141,16 @@
           </div>
         </div>
       </section>
+      <section class="games">
+        <div class="games__container">
+          <div class="games__text-wrapper">
+            <div class="games__image-wrapper">
+              <h2 class="games__title">Super Games</h2>
+            </div>
+          </div>
+        </div>
+      </section>
+
     </main>
     <footer>
       <div class="container"></div>
