продолжаем верстку секции games

--- a/source/index.html
+++ b/source/index.html
@@ -144,9 +144,20 @@
       <section class="games">
         <div class="games__container">
           <div class="games__text-wrapper">
-            <div class="games__image-wrapper">
-              <h2 class="games__title">Super Games</h2>
+            <h2 class="games__title">Super Games</h2>
+            <div class="games__date">
+              <span class="games__small-title">Дата</span>
+              <span class="games__count">7</span>
+              <span class="games__text">Марта 2019</span>
             </div>
+            <div class="games__time">
+              <span class="games__small-title">Время</span>
+              <span class="games__count">12:00</span>
+            </div>
+            <p class="games__description">Ежегодные соревнования по CrossFit</p>
+            <button class="games__button button">заполнить заявку</button>
+          </div>
+          <div class="games__image-wrapper">
           </div>
         </div>
       </section>
