секция жури + свайпер

--- a/source/index.html
+++ b/source/index.html
@@ -173,8 +173,132 @@
             </picture>
           </div>
         </div>
-        <div class="games__wrapper swiper">
-          <h3 class="swiper__title">Жюри</h3>
+        <h3 class="swiper-title">Жюри</h3>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-1-desktop.png" alt=""
+                  srcset="img/swiper-slide-1-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Анна Павлова</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-2-desktop.png" alt=""
+                  srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Алексей Лавров</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-3-desktop.png" alt=""
+                  srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Александр Пашков</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-4-desktop.png" alt=""
+                  srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Мария Кетова</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-1-desktop.png" alt=""
+                  srcset="img/swiper-slide-1-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Мария Васильева</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-2-desktop.png" alt=""
+                  srcset="img/swiper-slide-2-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Дмитрий Шолохов</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-3-desktop.png" alt=""
+                  srcset="img/swiper-slide-3-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Олег Симонов</span>
+            </div>
+            <div class="swiper-slide">
+              <picture>
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.webp 1x, img/swiper-slide-1-mobile@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 767px)"
+                  srcset="img/swiper-slide-1-mobile.png 1x, img/swiper-slide-1-mobile@2x.png 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.webp 1x, img/swiper-slide-1-tablet@2x.webp 2x">
+                <source type="image/webp" media="(max-width: 1365px)"
+                  srcset="img/swiper-slide-1-tablet.png 1x, img/swiper-slide-1-tablet@2x.png 2x">
+                <img class="swiper__image" src="img/swiper-slide-4-desktop.png" alt=""
+                  srcset="img/swiper-slide-4-desktop@2x.png 2x" width="260" height="294">
+              </picture>
+              <span class="swiper-name">Александра Костылева</span>
+            </div>
+          </div>
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
         </div>
       </section>
 
