удаление старых табов, приступаем к обновлению работы табов

--- a/source/index.html
+++ b/source/index.html
@@ -103,17 +103,17 @@
       <section class="subscription">
         <div class="subscription__container container">
           <h2 class="subscription__title tabs">Абонементы</h2>
-          <div class="tabs no-transition-global" data-tabs="parent" data-delay="300" data-height="max">
-            <div class="tabs__controls" data-tabs="controls">
-              <button class="tabs__control button" type="button" data-tabs="control">1 месяц</button>
-              <button class="tabs__control button" type="button" data-tabs="control">6 месяцев</button>
-              <button class="tabs__control button" type="button" data-tabs="control">12 месяцев</button>
+          <div class="tabs">
+            <div class="tabs__controls">
+              <button class="tabs__control button" type="button">1 месяц</button>
+              <button class="tabs__control button" type="button">6 месяцев</button>
+              <button class="tabs__control button" type="button">12 месяцев</button>
             </div>
             <ul class="tabs__list">
               <li class="tabs__item">
                 <h4 class="tabs__title">С тренером</h4>
                 <p class="tabs__description">12 занятий</p>
-                <div class="tabs__price-wrapper" data-tabs="content">
+                <div class="tabs__price-wrapper">
                   <span class="tabs__price">5000</span>
                   <span class="tabs__faded-price">5000</span>
                 </div>
@@ -173,6 +173,8 @@
             </picture>
           </div>
         </div>
+      </section>
+      <section class="swiper-container">
         <h3 class="swiper-title">Жюри</h3>
         <div class="swiper">
           <div class="swiper-wrapper">
