обновление работы табов

--- a/source/index.html
+++ b/source/index.html
@@ -103,14 +103,14 @@
       <section class="subscription">
         <div class="subscription__container container">
           <h2 class="subscription__title tabs">Абонементы</h2>
-          <div class="tabs">
-            <div class="tabs__controls">
-              <button class="tabs__control button" type="button">1 месяц</button>
-              <button class="tabs__control button" type="button">6 месяцев</button>
-              <button class="tabs__control button" type="button">12 месяцев</button>
+          <div class="tabs no-transition-global" data-tabs="parent" data-height="max">
+            <div class="tabs__controls" data-tabs="controls">
+              <button class="tabs__control button" type="button" data-tabs="control">1 месяц</button>
+              <button class="tabs__control button" type="button" data-tabs="control">6 месяцев</button>
+              <button class="tabs__control button" type="button" data-tabs="control">12 месяцев</button>
             </div>
-            <ul class="tabs__list">
-              <li class="tabs__item">
+            <ul class="tabs__list" data-tabs="content">
+              <li class="tabs__item" data-tabs="element">
                 <h4 class="tabs__title">С тренером</h4>
                 <p class="tabs__description">12 занятий</p>
                 <div class="tabs__price-wrapper">
@@ -119,7 +119,7 @@
                 </div>
                 <button class="tabs__button button" type="button">Купить абонемент</button>
               </li>
-              <li class="tabs__item tabs__item--is-selected">
+              <li class="tabs__item tabs__item--is-selected" data-tabs="element">
                 <h4 class="tabs__title">Дневной</h4>
                 <p class="tabs__description">с 8:00 до 17:00</p>
                 <div class="tabs__price-wrapper">
@@ -128,7 +128,7 @@
                 </div>
                 <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
               </li>
-              <li class="tabs__item">
+              <li class="tabs__item" data-tabs="element">
                 <h4 class="tabs__title">Полный день</h4>
                 <p class="tabs__description">с 8:00 до 22:00 </p>
                 <div class="tabs__price-wrapper">
