изменения в табах, неполные

--- a/source/index.html
+++ b/source/index.html
@@ -109,31 +109,61 @@
               <button class="tabs__control button" type="button" data-tabs="control">6 месяцев</button>
               <button class="tabs__control button" type="button" data-tabs="control">12 месяцев</button>
             </div>
-            <ul class="tabs__list" data-tabs="content">
-              <li class="tabs__item" data-tabs="element">
+            <ul class="tabs__list">
+              <li class="tabs__item">
                 <h4 class="tabs__title">С тренером</h4>
                 <p class="tabs__description">12 занятий</p>
-                <div class="tabs__price-wrapper">
-                  <span class="tabs__price">5000</span>
-                  <span class="tabs__faded-price">5000</span>
+                <div class="tabs__price-wrapper" data-tabs="content">
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">5000</span>
+                    <span class="tabs__faded-price">5000</span>
+                  </div>
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">9999</span>
+                    <span class="tabs__faded-price">9999</span>
+                  </div>
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">1111</span>
+                    <span class="tabs__faded-price">11111</span>
+                  </div>
                 </div>
                 <button class="tabs__button button" type="button">Купить абонемент</button>
               </li>
-              <li class="tabs__item tabs__item--is-selected" data-tabs="element">
+              <li class="tabs__item tabs__item--is-selected">
                 <h4 class="tabs__title">Дневной</h4>
                 <p class="tabs__description">с 8:00 до 17:00</p>
-                <div class="tabs__price-wrapper">
-                  <span class="tabs__price">1700</span>
-                  <span class="tabs__faded-price">1700</span>
+                <div class="tabs__price-wrapper" data-tabs="content">
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">5000</span>
+                    <span class="tabs__faded-price">5000</span>
+                  </div>
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">9999</span>
+                    <span class="tabs__faded-price">9999</span>
+                  </div>
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">1111</span>
+                    <span class="tabs__faded-price">11111</span>
+                  </div>
                 </div>
                 <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
               </li>
-              <li class="tabs__item" data-tabs="element">
+              <li class="tabs__item">
                 <h4 class="tabs__title">Полный день</h4>
                 <p class="tabs__description">с 8:00 до 22:00 </p>
-                <div class="tabs__price-wrapper">
-                  <span class="tabs__price">2700</span>
-                  <span class="tabs__faded-price">2700</span>
+                <div class="tabs__price-wrapper" data-tabs="content">
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">5000</span>
+                    <span class="tabs__faded-price">5000</span>
+                  </div>
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">9999</span>
+                    <span class="tabs__faded-price">9999</span>
+                  </div>
+                  <div class="tabs__element-wrapper" data-tabs="element">
+                    <span class="tabs__price">1111</span>
+                    <span class="tabs__faded-price">11111</span>
+                  </div>
                 </div>
                 <button class="tabs__button button" type="button">Купить абонемент</button>
               </li>
