--- a/source/index.html
+++ b/source/index.html
@@ -36,21 +36,21 @@
     <header class="header">
       <h1 class="visually-hidden">Просторный тренажерный зал площадью 900 кв/м</h1>
       <div class="header__container container">
-        <span class="header__logo">Supergym</span>
-        <a class="header__telephone" href="tel: 8-800-555-55-55">8-800-555-55-55</a>
+        <a href="#"><img src="img/main-logo.png" alt="" srcset="img/main-logo@2x.png" width="120" height="26"></a>
+        <a href="tel: 8-800-555-55-55">8-800-555-55-55</a>
       </div>
     </header>
     <main>
       <section class="intro">
         <div class="intro__container">
           <div class="intro__text-wrapper">
-            <p class="intro__city">Омск</p>
-            <ul class="intro__list">
-              <li class="intro__item">Тренажёрный зал</li>
-              <li class="intro__item">Групповые занятия</li>
-              <li class="intro__item">Кардио-зона</li>
+            <p>Омск</p>
+            <ul>
+              <li>Тренажёрный зал</li>
+              <li>Групповые занятия</li>
+              <li>Кардио-зона</li>
             </ul>
-            <h2 class="intro__title">Фитнес Центр</h2>
+            <h2>Фитнес Центр</h2>
             <button class="intro__button button" type="submit">Купить абонемент</button>
           </div>
           <picture>
@@ -58,18 +58,17 @@
               srcset="img/hero-image-tablet.webp 1x, img/hero-image-tablet@2x.webp 2x">
             <source type="image/webp" media="(max-width: 1365px)"
               srcset="img/hero-image-tablet.png 1x, img/hero-image-tablet@2x.png 2x">
-            <img class="intro__image" src="img/hero-image-desktop.png" srcset="img/hero-image-desktop@2x.png 2x"
-              width="500" height="524" alt="">
+            <img src="img/hero-image-desktop.png" srcset="img/hero-image-desktop@2x.png 2x" width="500" height="524"
+              alt="">
           </picture>
-
         </div>
       </section>
       <section class="about">
         <div class="about__container">
           <div class="about__text-wrapper">
-            <h2 class="about__title">Тренажерный зал</h2>
-            <h3 class="about__overview">Просторный зал площадью 900 кв/м</h3>
-            <p class="about__description">Supergym – самый большой фитнес центр за Уралом и идеальное место для
+            <h2>Тренажерный зал</h2>
+            <h3>Просторный зал площадью 900 кв/м</h3>
+            <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для
               укрепления тела и здоровья. Тренажерный зал оснащен всем необходимым современным оборудованием для
               всех
               спортсменов.
@@ -87,8 +86,8 @@
                 srcset="img/gym-picture-tablet.webp 1x, img/gym-picture-tablet@2x.webp 2x">
               <source type="image/webp" media="(max-width: 1365px)"
                 srcset="img/gym-picture-tablet.png 1x, img/gym-picture-tablet@2x.png 2x">
-              <img class="about__image" src="img/gym-picture-desktop.png" srcset="img/gym-picture-desktop@2x.png 2x"
-                width="660" height="401" alt="">
+              <img src="img/gym-picture-desktop.png" srcset="img/gym-picture-desktop@2x.png 2x" width="660" height="401"
+                alt="">
             </picture>
             <div class="about__iframe-wrapper">
               <iframe width="364" height="228" src="https://www.youtube.com/embed/9TZXsZItgdw?si=Xq4Qrh6BZO2c6v0v"
@@ -109,31 +108,31 @@
               <button class="tabs__control button" type="button" data-period="6">6 месяцев</button>
               <button class="tabs__control button" type="button" data-period="12">12 месяцев</button>
             </div>
-            <ul class="tabs__list">
-              <li class="tabs__item">
-                <h4 class="tabs__title">С тренером</h4>
-                <p class="tabs__description">12 занятий</p>
+            <ul>
+              <li>
+                <h4>С тренером</h4>
+                <p>12 занятий</p>
                 <div class="tabs__price-wrapper">
-                  <span class="tabs__price">5000</span>
-                  <span class="tabs__faded-price">5000</span>
+                  <span>5000</span>
+                  <span>5000</span>
                 </div>
                 <button class="tabs__button button" type="button">Купить абонемент</button>
               </li>
-              <li class="tabs__item tabs__item--is-selected">
-                <h4 class="tabs__title">Дневной</h4>
-                <p class="tabs__description">с 8:00 до 17:00</p>
+              <li class="is-selected">
+                <h4>Дневной</h4>
+                <p>с 8:00 до 17:00</p>
                 <div class="tabs__price-wrapper">
-                  <span class="tabs__price">1700</span>
-                  <span class="tabs__faded-price">1700</span>
+                  <span>1700</span>
+                  <span>1700</span>
                 </div>
                 <button class="tabs__button tabs__button--is-selected button" type="button">Купить абонемент</button>
               </li>
-              <li class="tabs__item">
-                <h4 class="tabs__title">Полный день</h4>
-                <p class="tabs__description">с 8:00 до 22:00 </p>
+              <li>
+                <h4>Полный день</h4>
+                <p>с 8:00 до 22:00 </p>
                 <div class="tabs__price-wrapper">
-                  <span class="tabs__price">2700</span>
-                  <span class="tabs__faded-price">2700</span>
+                  <span>2700</span>
+                  <span>2700</span>
                 </div>
                 <button class="tabs__button button" type="button">Купить абонемент</button>
               </li>
@@ -174,6 +173,7 @@
           </div>
         </div>
       </section>
+
       <section class="swiper-container">
         <h3 class="swiper-title">Жюри</h3>
         <div class="swiper">
@@ -303,6 +303,7 @@
           <div class="swiper-button-prev"></div>
         </div>
       </section>
+
       <section class="advantages">
         <div class="advantages__container container">
           <h2 class="advantages__title">Наши Преимущества</h2>
